--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # Add the university logo asset (place the file at assets/images/amasya_logo.png)
+  assets:
+    - assets/images/amasya_logo.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
