--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,8 @@ flutter:
   # The university logo asset is optional during development.
   # If you add `assets/images/amasya_logo.png` to the repo, uncomment
   # the lines below to bundle it.
-  # assets:
-  #   - assets/images/amasya_logo.png
+  assets:
+    - assets/images/amasya_logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
